--- a/local/signup.html
+++ b/local/signup.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="../maincss.css" type="text/css">
 </head>
 <body style="background-color: rgb(0, 0, 34); color: white;">
-    
+    <a href="./index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</span></a>
+    <form method="POST" onsubmit="">
 
-    <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
-        <a href="./index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</div></a>
-    </div>
+    </form>
 </body>
