--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
         <span style="position: relative; top: 200px;"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1193006683&color=%235783ff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/mad-147247654" title="【音Mad】さしみ" target="_blank" style="color: #cccccc; text-decoration: none;">【音Mad】さしみ</a> · <a href="https://soundcloud.com/mad-147247654/ifthenbreakend" title="意不然ブレイクエンド" target="_blank" style="color: #cccccc; text-decoration: none;">意不然ブレイクエンド</a></div></span>
         <a style="color: coral;" href="https://soundcloud.com/mad-147247654" target="_blank"><div class="Guwanguwan" style="font-size: 100%; position: relative; top: 300px; left: 30%; border: 4px solid white; width: 40%;">もっと聞け</div></a>
     </div>
+    <div class="Header" style="background-color: white; width: 100%; height: 640px; position: relative; top: 200px; font-size: 70px; text-align: center; color: black;">
+        <span style="position: relative; top: 100px;">冒険を始めましょう。</span>
+        <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 45%; top: 40%; border: 4px solid black; background-color: navy;">ログイン</span></a>
+    </div>
+
+    <div style="width: 100%; height: 120px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: relative; top: 400px;">
+        <span class="Header" style="font-size: 30px;">TeamKeyBox</span>
+        <a href="https://github.com/TeamKeyBox/TeamKeyBoxPage" target="_blank">Github</a>
+    </div>
     
     <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
         <a href="./index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</span></a>
-        <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span>
+        <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span></a>
     </div>
+
 </body>
