--- a/local/signup.html
+++ b/local/signup.html
@@ -7,8 +7,16 @@
     <link rel="stylesheet" href="../maincss.css" type="text/css">
 </head>
 <body style="background-color: rgb(0, 0, 34); color: white;">
-    <a href="./index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</span></a>
-    <form method="POST" onsubmit="">
-
+    <a href="../index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</span></a>
+    <form method="POST" onsubmit="" name="LoginForm" style="font-size: 30px;">
+        <label>
+            ユーザーID:
+            <input type="text" name="userid" style="width: 160px; height: 32px;"><br>
+        </label>
+        <label>
+            パスワード:
+            <input type="password" name="password" style="width: 160px; height: 32px;"><br>
+        </label>
+        <button type="submit">ログイン</button>
     </form>
 </body>
