ページの更新

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>KeyBox</title>
 
+    <meta charset="UTF-8">
     <meta name="theme-color" content="#1111ff">
     <meta name="description" content="KeyBoxでは、総合的なメディアやゲームの空間の共有を行い、ユーザー=プレイヤーのような関係を築き上げると思います、多分。あなたの投稿やアクティビティは、経験値となってあなたのレベルに影響お及ぼします。TeamKeyBoxは、気分次第で面白いものを作りあげます。メンバー募集はしていませんよ。">
     <link rel="stylesheet" href="./maincss.css" type="text/css">
@@ -20,6 +21,8 @@
             </div>
         </div>
         <a href="https://discord.gg/ukEw5tBxSU" target="_blank"><div class="Guwanguwan" style="color: black; font-size: 50%; position: relative; top: 160px; left: 2%; border: 4px solid blue; width: 70%; height: 60px; background: lightblue;">TeamKeyBoxの最新情報を手に入れませんか?</div></a>
+        <a href="https://dissoku.net/server/940039290321252372" target="_blank" style="font-size: 24px; border: 2px solid white; position: relative; top: 100px; left: 2%;">ディス速</a>
+        <a href="https://disboard.org/ja/server/940039290321252372" target="_blank" style="font-size: 24px; border: 2px solid white; position: relative; top: 100px; left: 4%;">DISBOARD</a>
     </div>
 
     <div class="Header" style="background-color: black; width: 100%; height: 720px; position: relative; top: 100px; font-size: 70px; text-align: center;">
@@ -29,16 +32,16 @@
     </div>
     <div class="Header" style="background-color: white; width: 100%; height: 640px; position: relative; top: 200px; font-size: 70px; text-align: center; color: black;">
         <span style="position: relative; top: 100px;">冒険を始めましょう。</span>
-        <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 45%; top: 40%; border: 4px solid black; background-color: navy;">ログイン</span></a>
+        <a href="./local/games.html"><span class="HoverWhite" style="vertical-align: middle; text-align:center; font-size: 40px; position: absolute; right: 45%; top: 40%; border: 4px solid black; background-color: navy;">Projects</span></a>
     </div>
 
     <div style="width: 100%; height: 120px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: relative; top: 400px;">
-        <span class="Header" style="font-size: 30px;">TeamKeyBox</span>
+        <span class="Header" style="font-size: 30px;">Launched by TeamKeyBox</span><br>
         <a href="https://github.com/TeamKeyBox/TeamKeyBoxPage" target="_blank">Github</a>
     </div>
     
     <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
-        <a href="./index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</span></a>
+        <a href="./index.html"><span class="Header" style="font-size: 80px;">KeyBox</span></a>
         <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span></a>
     </div>
 
