--- a/local/signup.html
+++ b/local/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../maincss.css" type="text/css">
 </head>
 <body style="background-color: rgb(0, 0, 34); color: white;">
-    <a href="../index.html"><span class="Header" style="font-size: 80px;">TeamKeyBox</span></a>
+    <a href="../index.html"><span class="Header" style="font-size: 80px;">KeyBox</span></a>
     <form method="POST" onsubmit="" name="LoginForm" style="font-size: 30px;">
         <label>
             ユーザーID:
