ロゴの追加

--- a/local/projects/personal/sashimibot.html
+++ b/local/projects/personal/sashimibot.html
@@ -20,7 +20,7 @@
     </div>
 
     <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
-        <a href="../../../index.html"><span class="Header" style="font-size: 80px;">KeyBox</span></a>
+        <a href="../../../index.html"><img src="../../../images/logo_alpha.png" width="80" height="80"><span class="Header" style="font-size: 80px; position: absolute; top: 0;">KeyBox</span></a>
         <a href="../../signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span></a>
     </div>
 </body>
