--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#1111ff">
     <meta name="description" content="KeyBoxでは、総合的なメディアやゲームの空間の共有を行い、ユーザー=プレイヤーのような関係を築き上げると思います、多分。あなたの投稿やアクティビティは、経験値となってあなたのレベルに影響お及ぼします。TeamKeyBoxは、気分次第で面白いものを作りあげます。メンバー募集はしていませんよ。">
     <link rel="stylesheet" href="./maincss.css" type="text/css">
+    <link rel="icon" href="./images/logo.png">
 </head>
 <body style="background-color: rgb(0, 0, 34); color: white;">
 
@@ -41,7 +42,7 @@
     </div>
     
     <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
-        <a href="./index.html"><span class="Header" style="font-size: 80px;">KeyBox</span></a>
+        <a href="./index.html"><img src="./images/logo_alpha.png" width="80" height="80"><span class="Header" style="font-size: 80px; position: absolute; top: 0;">KeyBox</span></a>
         <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span></a>
     </div>
 
