--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
         <a style="color: coral;" href="https://soundcloud.com/mad-147247654" target="_blank"><div class="Guwanguwan" style="font-size: 100%; position: relative; top: 300px; left: 30%; border: 4px solid white; width: 40%;">もっと聞け</div></a>
     </div>
     <div class="Header" style="background-color: white; width: 100%; height: 640px; position: relative; top: 200px; font-size: 70px; text-align: center; color: black;">
-        <span style="position: relative; top: 100px;">冒険を始めましょう。</span>
-        <a href="./local/games.html"><span class="HoverWhite" style="vertical-align: middle; text-align:center; font-size: 40px; position: absolute; right: 45%; top: 40%; border: 4px solid black; background-color: navy;">Projects</span></a>
+        <span style="position: relative; top: 100px;">冒険を始めましょう。</span><br>
+        <span style="position: relative; top: 100px; font-size: xx-large;">
+            TeamKeyBoxは、あなたの経験値となるゲームやツール等のコンテンツを配信する努力をしています。<br>
+            下のボタンを押して、あなたの好みに合うコンテンツを探してみましょう。
+        </span>
+        <a href="./local/games.html"><span class="HoverWhite" style="vertical-align: middle; text-align:center; font-size: 40px; position: relative; right: 35%; top: 180px; border: 4px solid black; background-color: navy;">Projects</span></a>
     </div>
 
     <div style="width: 100%; height: 120px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: relative; top: 400px;">
