--- a/local/games.html
+++ b/local/games.html
@@ -9,14 +9,29 @@
 </head>
 <body style="background-color: rgb(0, 0, 34); color: white;">
 
-    <div style="border: 1px solid white; width: 100%; position: relative; top: 90px;">
-        <span class="Header">(管理者個人のやつ)</span><br>
-        <a href="./projects/personal/sashimibot.html" class="MainText">さしみボット</a>
+    <div style="border: 1px solid rgb(60, 60, 60); width: 100%; position: relative; top: 90px;">
+        <span class="Header" style="font-size: 70px;">(管理者個人のやつ)</span><br>
+        <div class="GameBox">
+            <a href="./projects/personal/sashimibot.html" class="MainText">さしみボット</a><br>
+            このボットは、表を作ったり約数を求めたりとかいろいろと便利機能があります。<br>
+            また、まだ完成はしていませんが、AIもどきがあります。<br>
+            荒らし対策(強制)もあります！
+        </div>
     </div>
 
-    <div style="border: 1px solid white; width: 100%; position: relative; top: 90px;">
-        <span class="Header">TeamKeyBoxのプロジェクト</span><br>
-        <span class="MainText">KeyBox</span>
+    <br>
+
+    <div style="border: 1px solid rgb(60, 60, 60); width: 100%; position: relative; top: 90px;">
+        <span class="Header" style="font-size: 70px;">TeamKeyBoxのプロジェクト</span><br>
+        <div class="GameBox">
+            <a href="./projects/teamkeybox/keybox/keybox.html" class="MainText">KeyBox</a><br>
+            (未完成の音ゲーをお届けー)
+        </div>
+        <div class="GameBox">
+            <a href="./projects/teamkeybox/boxcore/boxcore.html" class="MainText">BoxCore</a><br>
+            3Dと2Dの特徴を活かして進行するアクションパズルゲーム。
+            <img src="./projects/teamkeybox/boxcore/splash.png">
+        </div>
     </div>
 
     <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
