デザイン改善したはずずずずずず

--- a/index.html
+++ b/index.html
@@ -8,46 +8,33 @@
     <link rel="stylesheet" href="./maincss.css" type="text/css">
     <link rel="icon" href="./images/logo.png">
 </head>
-<body style="background-color: rgb(0, 0, 34); color: white;">
+<body style="background-color: rgb(0, 0, 10); color: white; margin: 0px;">
 
-    <div class="Header" style="background-image: linear-gradient(to right, rgba(0, 0, 60, 0), rgb(0, 0, 60)), url(./images/back.jpg); width: 100%; height: 640px; position: relative; top: 90px;">
-        <div class="Right" style="border: 4px outset blue; width: 370px; height: 520px; top: 60px;"><iframe style="position: absolute; right: 10px; top: 10px;" src="https://discord.com/widget?id=940039290321252372&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
-        <div class="Center">Discordのサーバー
-            <div class="MainText">
-                ・独自のボットを使用<br>
-                ・荒らし対策が万全<br>
-                ・皆さんの趣味や好物を話しあえます<br>
-                いろいろな界隈から来てほしいと思って考えたサーバーです。<br>
-                さしみボットのサポートサーバーでもあります。<br>
-            </div>
+    <div class="Header" style="background-image: linear-gradient(to right, rgba(0, 0, 60, 0.5), rgb(0, 0, 60)), url(./images/back.jpg); width: 100%; height: 320px; position: relative; top: 90px; padding: 0%;">
+        Games
+        <div style="position: absolute; left: 0px; top: 70px;" class="GameBox_Portable" onclick="window.open('https://github.com/TeamKeyBox/KeyBox', '_blank')">
+            <span style="font-size: 30px;">KeyBox</span><br>
+            KeyBox is a rhythm game to press the "KeyBox" like osu!
         </div>
-        <a href="https://discord.gg/ukEw5tBxSU" target="_blank"><div class="Guwanguwan" style="color: black; font-size: 50%; position: relative; top: 160px; left: 2%; border: 4px solid blue; width: 70%; height: 60px; background: lightblue;">TeamKeyBoxの最新情報を手に入れませんか?</div></a>
-        <a href="https://dissoku.net/server/940039290321252372" target="_blank" style="font-size: 24px; border: 2px solid white; position: relative; top: 100px; left: 2%;">ディス速</a>
-        <a href="https://disboard.org/ja/server/940039290321252372" target="_blank" style="font-size: 24px; border: 2px solid white; position: relative; top: 100px; left: 4%;">DISBOARD</a>
+        <div style="position: absolute; left: 400px; top: 70px;" class="GameBox_Portable" onclick="window.open('https://github.com/TeamKeyBox/BoxCore', '_blank')">
+            <span style="font-size: 30px;">BoxCore</span><br>
+            BoxCore is an action puzzle game like portal between 2D and 3D.
+        </div>
     </div>
 
-    <div class="Header" style="background-color: black; width: 100%; height: 720px; position: relative; top: 100px; font-size: 70px; text-align: center;">
-        <span style="position: relative; top: 100px;">私達(1人)はとても頭のおかしい曲を作っています。</span>
-        <span style="position: relative; top: 200px;"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1193006683&color=%235783ff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/mad-147247654" title="【音Mad】さしみ" target="_blank" style="color: #cccccc; text-decoration: none;">【音Mad】さしみ</a> · <a href="https://soundcloud.com/mad-147247654/ifthenbreakend" title="意不然ブレイクエンド" target="_blank" style="color: #cccccc; text-decoration: none;">意不然ブレイクエンド</a></div></span>
-        <a style="color: coral;" href="https://soundcloud.com/mad-147247654" target="_blank"><div class="Guwanguwan" style="font-size: 100%; position: relative; top: 300px; left: 30%; border: 4px solid white; width: 40%;">もっと聞け</div></a>
-    </div>
-    <div class="Header" style="background-color: white; width: 100%; height: 640px; position: relative; top: 200px; font-size: 70px; text-align: center; color: black;">
-        <span style="position: relative; top: 100px;">冒険を始めましょう。</span><br>
-        <span style="position: relative; top: 100px; font-size: xx-large;">
-            TeamKeyBoxは、あなたの経験値となるゲームやツール等のコンテンツを配信する努力をしています。<br>
-            下のボタンを押して、あなたの好みに合うコンテンツを探してみましょう。
-        </span>
-        <a href="./local/games.html"><span class="HoverWhite" style="vertical-align: middle; text-align:center; font-size: 40px; position: relative; right: 35%; top: 180px; border: 4px solid black; background-color: navy;">Projects</span></a>
-    </div>
-
-    <div style="width: 100%; height: 120px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: relative; top: 400px;">
-        <span class="Header" style="font-size: 30px;">Launched by TeamKeyBox</span><br>
-        <a href="https://github.com/TeamKeyBox/TeamKeyBoxPage" target="_blank">Github</a>
+    <div style="width: 100%; height: 160px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: absolute; bottom: 0em; left: 0em;">
+        <span class="Header" style="font-size: 30px; color: gray;">Launched by TeamKeyBox</span><br>
+        <table class="BottomTable">
+            <tr>
+                <td><a href="https://github.com/TeamKeyBox/TeamKeyBoxPage" target="_blank">Github</a></td>
+                <td><a href="https://discord.gg/ukEw5tBxSU" target="_blank">Discord</a></td>
+            </tr>
+        </table>
     </div>
     
-    <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
-        <a href="./index.html"><img src="./images/logo_alpha.png" width="80" height="80"><span class="Header" style="font-size: 80px; position: absolute; top: 0;">KeyBox</span></a>
-        <a href="./local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span></a>
+    <div style="width: 100%; height: 60px; position: fixed; border: 4px outset rgb(10, 10, 200); background-color: rgb(0, 0, 34); top: -4px; left: -4px;">
+        <a href="./index.html"><img src="./images/logo_alpha.png" width="60" height="60"><span class="Header" style="font-size: 40px; position: absolute; margin-top: auto; margin-bottom: auto;">KeyBox</span></a>
+        <a href="./local/signup.html"><span class="HoverWhite" style="font-size: 20px; position: absolute; right: 10px; border: 4px solid white; border-radius: 4px; background-color: navy; margin-top: auto; margin-bottom: auto;">Login</span></a>
     </div>
 
 </body>
