--- a/local/games.html
+++ b/local/games.html
@@ -9,33 +9,19 @@
 </head>
 <body style="background-color: rgb(0, 0, 34); color: white;">
 
-    <div style="border: 1px solid rgb(60, 60, 60); width: 100%; position: relative; top: 90px;">
-        <span class="Header" style="font-size: 70px;">(管理者個人のやつ)</span><br>
-        <div class="GameBox">
-            <a href="./projects/personal/sashimibot.html" class="MainText">さしみボット</a><br>
-            このボットは、表を作ったり約数を求めたりとかいろいろと便利機能があります。<br>
-            また、まだ完成はしていませんが、AIもどきがあります。<br>
-            荒らし対策(強制)もあります！
-        </div>
+
+    <div style="width: 100%; height: 160px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: absolute; bottom: 0em; left: 0em;">
+        <span class="Header" style="font-size: 30px; color: gray;">Launched by TeamKeyBox</span><br>
+        <table class="BottomTable">
+            <tr>
+                <td><a href="https://github.com/TeamKeyBox/TeamKeyBoxPage" target="_blank">Github</a></td>
+                <td><a href="https://discord.gg/ukEw5tBxSU" target="_blank">Discord</a></td>
+            </tr>
+        </table>
     </div>
 
-    <br>
-
-    <div style="border: 1px solid rgb(60, 60, 60); width: 100%; position: relative; top: 90px;">
-        <span class="Header" style="font-size: 70px;">TeamKeyBoxのプロジェクト</span><br>
-        <div class="GameBox">
-            <a href="./projects/teamkeybox/keybox/keybox.html" class="MainText">KeyBox</a><br>
-            (未完成の音ゲーをお届けー)
-        </div>
-        <div class="GameBox">
-            <a href="./projects/teamkeybox/boxcore/boxcore.html" class="MainText">BoxCore</a><br>
-            3Dと2Dの特徴を活かして進行するアクションパズルゲーム。
-            <img src="./projects/teamkeybox/boxcore/splash.png">
-        </div>
-    </div>
-
-    <div style="width: 100%; height: 80px; position: fixed; border: 4px outset rgb(23, 23, 255); background-color: darkblue; top: -4px; left: -4px;">
-        <a href="../index.html"><img src="../images/logo_alpha.png" width="80" height="80"><span class="Header" style="font-size: 80px; position: absolute; top: 0;">KeyBox</span></a>
-        <a href="./signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 40px; position: absolute; right: 10px; top: 30%; border: 4px solid white; background-color: navy;">ログイン</span></a>
+    <div style="width: 100%; height: 60px; position: fixed; border: 4px outset rgb(10, 10, 200); background-color: rgb(0, 0, 34); top: -4px; left: -4px;">
+        <a href="../index.html"><img src="./images/logo_alpha.png" width="60" height="60"><span class="Header" style="font-size: 40px; position: absolute; top: 25%;">KeyBox</span></a>
+        <a href="../local/signup.html"><span class="HoverWhite" style="vertical-align: middle; font-size: 20px; position: absolute; right: 10px; top: 25%; border: 4px solid white; background-color: navy;">ログイン</span></a>
     </div>
 </body>
