--- a/index.html
+++ b/index.html
@@ -4,37 +4,12 @@
 
     <meta charset="UTF-8">
     <meta name="theme-color" content="#1111ff">
-    <meta name="description" content="KeyBoxでは、総合的なメディアやゲームの空間の共有を行い、ユーザー=プレイヤーのような関係を築き上げると思います、多分。あなたの投稿やアクティビティは、経験値となってあなたのレベルに影響お及ぼします。TeamKeyBoxは、気分次第で面白いものを作りあげます。メンバー募集はしていませんよ。">
+    <meta name="description" content="ここに居場所はねえよ https://gamejolt.com/games/teamkeybox_kb/725094">
     <link rel="stylesheet" href="./maincss.css" type="text/css">
     <link rel="icon" href="./images/logo.png">
 </head>
 <body style="background-color: rgb(0, 0, 10); color: white; margin: 0px;">
 
-    <div class="Header" style="background-image: linear-gradient(to right, rgba(0, 0, 60, 0.5), rgb(0, 0, 60)), url(./images/back.jpg); width: 100%; height: 320px; position: relative; top: 90px; padding: 0%;">
-        Games
-        <div style="position: absolute; left: 0px; top: 70px;" class="GameBox_Portable" onclick="window.open('https://github.com/TeamKeyBox/KeyBox', '_blank')">
-            <span style="font-size: 30px;">KeyBox</span><br>
-            KeyBox is a rhythm game to press the "KeyBox" like osu!
-        </div>
-        <div style="position: absolute; left: 400px; top: 70px;" class="GameBox_Portable" onclick="window.open('https://github.com/TeamKeyBox/BoxCore', '_blank')">
-            <span style="font-size: 30px;">BoxCore</span><br>
-            BoxCore is an action puzzle game like portal between 2D and 3D.
-        </div>
-    </div>
-
-    <div style="width: 100%; height: 160px; background-image: linear-gradient(to bottom, rgb(0, 0, 70), rgb(0, 0, 0)); position: absolute; bottom: 0em; left: 0em;">
-        <span class="Header" style="font-size: 30px; color: gray;">Launched by TeamKeyBox</span><br>
-        <table class="BottomTable">
-            <tr>
-                <td><a href="https://github.com/TeamKeyBox/TeamKeyBoxPage" target="_blank">Github</a></td>
-                <td><a href="https://discord.gg/ukEw5tBxSU" target="_blank">Discord</a></td>
-            </tr>
-        </table>
-    </div>
-    
-    <div style="width: 100%; height: 60px; position: fixed; border: 4px outset rgb(10, 10, 200); background-color: rgb(0, 0, 34); top: -4px; left: -4px;">
-        <a href="./index.html"><img src="./images/logo_alpha.png" width="60" height="60"><span class="Header" style="font-size: 40px; position: absolute; margin-top: auto; margin-bottom: auto;">KeyBox</span></a>
-        <a href="./local/signup.html"><span class="HoverWhite" style="font-size: 20px; position: absolute; right: 10px; border: 4px solid white; border-radius: 4px; background-color: navy; margin-top: auto; margin-bottom: auto;">Login</span></a>
-    </div>
+	ここに居場所はねえよ
 
 </body>
