一旦テスト用に挙げてみるぜい

--- a/characters/amprel.html
+++ b/characters/amprel.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>KeyBox > KeyBoxer</title>
+        <title>KeyBox > アンプレル</title>
         <link rel="stylesheet" href="../main.css">
         <link rel="icon" type="image/png" href="../logo_32px.png" sizes="32x32">
     </head>
@@ -12,27 +12,27 @@
         <div class="story transion_main" style="width: 100%; position: absolute; top: 9%;">
             <div class="bio">
                 <div class="bioimage">
-                    <img src="./keyboxer.png" style="position: absolute; left: 300px; top: 50px; scale: 4;">
+                    <img src="./amprel.png" style="position: absolute; left: 300px; top: 150px; scale: 2;">
                 </div>
-                <h1 style="border-color: cyan;">KeyBoxer<div style="background-color: cyan;"></div></h1>
+                <h1 style="border-color: red;">アンプレル<div style="background-color: red;"></div></h1>
             </div>
             <div class="section">概要</div>
             <div style="margin-left: 100px;">
-                自らが持つ謎の力を利用して音楽を奏でるボックス状の生物。<br>
-                通常より1.3倍程度の承認欲求を持っており、それを満たすためにSNSを始める。<br>
-                かなりの純粋であり、周りは自然と純粋さを守ろうとする。<br>
+                踊ることが好きなオノメコイド族のお兄さん。<br>
+                だがロックボックスになる前は大量殺人をしていた。<br>
+                嘘を直観で判断することができる。<br>
                 <div class="serif">
-                    <div class="icon"><img src="./keyboxer.png"></div><div class="quote"><div>
-                        「僕の音楽をみんなに届けたい！」<br>
-                        「今日は何を演奏しようかな...これにしよう！」<br>
+                    <div class="icon"><img src="./amprel.png" style="position: relative; top: 0px; left: -35px;"></div><div class="quote"><div>
+                        「君、なかなか面白い嘘をつくね」<br>
+                        「僕はただ、この現状に満足していないだけだよ」<br>
                     </div></div>
                 </div>
                 <table>
-                    <tr><th>目の色</th><td>水色</td></tr>
-                    <tr><th>誕生日</th><td>3432年3月19日</td></tr>
-                    <tr><th>好きな食べ物</th><td>桃</td></tr>
-                    <tr><th>好きなジャンル</th><td>全部！</td></tr>
-                    <tr><th>好きな生物</th><td>みんな！</td></tr>
+                    <tr><th>目の色</th><td>赤色</td></tr>
+                    <tr><th>誕生日</th><td>3411年9月21日</td></tr>
+                    <tr><th>好きな食べ物</th><td>蟹</td></tr>
+                    <tr><th>担当するジャンル</th><td>Electro Swing</td></tr>
+                    <tr><th>好きな生物</th><td>自分の両親</td></tr>
                 </table>
             </div>
         </div>
