--- a/characters/centraldread.html
+++ b/characters/centraldread.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>KeyBox > KeyBoxer</title>
+        <title>KeyBox > Central Dread β</title>
         <link rel="stylesheet" href="../main.css">
         <link rel="icon" type="image/png" href="../logo_32px.png" sizes="32x32">
     </head>
@@ -12,27 +12,27 @@
         <div class="story transion_main" style="width: 100%; position: absolute; top: 9%;">
             <div class="bio">
                 <div class="bioimage">
-                    <img src="./keyboxer.png" style="position: absolute; left: 300px; top: 50px; scale: 4;">
+                    <img src="./centraldread.png" style="position: absolute; left: 300px; top: 150px; scale: 2;">
                 </div>
-                <h1 style="border-color: cyan;">KeyBoxer<div style="background-color: cyan;"></div></h1>
+                <h1 style="border-color: blue;">Central Dread β<div style="background-color: blue;"></div></h1>
             </div>
             <div class="section">概要</div>
             <div style="margin-left: 100px;">
-                自らが持つ謎の力を利用して音楽を奏でるボックス状の生物。<br>
-                通常より1.3倍程度の承認欲求を持っており、それを満たすためにSNSを始める。<br>
-                かなりの純粋であり、周りは自然と純粋さを守ろうとする。<br>
+                TechCaveによって作られた戦闘用ロボットの試作品。<br>
+                疑似的な感情を有しており、社会的な生物らしい言葉を出すこともある。<br>
+                しかし、学習が不完全であり、若干臆病になってしまっている。<br>
                 <div class="serif">
-                    <div class="icon"><img src="./keyboxer.png"></div><div class="quote"><div>
-                        「僕の音楽をみんなに届けたい！」<br>
-                        「今日は何を演奏しようかな...これにしよう！」<br>
+                    <div class="icon"><img src="./centraldread.png" style="position: relative; top: 0px; left: -35px;"></div><div class="quote"><div>
+                        「私も極力皆さんの力にはなりたいんですが...」<br>
+                        「やはり、誰かの為に動いているんですよ。KeyBoxerさんは」<br>
                     </div></div>
                 </div>
                 <table>
-                    <tr><th>目の色</th><td>水色</td></tr>
-                    <tr><th>誕生日</th><td>3432年3月19日</td></tr>
-                    <tr><th>好きな食べ物</th><td>桃</td></tr>
-                    <tr><th>好きなジャンル</th><td>全部！</td></tr>
-                    <tr><th>好きな生物</th><td>みんな！</td></tr>
+                    <tr><th>目の色</th><td>青色</td></tr>
+                    <tr><th>製造開始日</th><td>3429年2月21日</td></tr>
+                    <tr><th>好きな食べ物</th><td>なし</td></tr>
+                    <tr><th>担当するジャンル</th><td>Dubstep</td></tr>
+                    <tr><th>好きな生物</th><td>なし</td></tr>
                 </table>
             </div>
         </div>
