--- a/characters/tanel.html
+++ b/characters/tanel.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>KeyBox > KeyBoxer</title>
+        <title>KeyBox > タネル</title>
         <link rel="stylesheet" href="../main.css">
         <link rel="icon" type="image/png" href="../logo_32px.png" sizes="32x32">
     </head>
@@ -12,27 +12,27 @@
         <div class="story transion_main" style="width: 100%; position: absolute; top: 9%;">
             <div class="bio">
                 <div class="bioimage">
-                    <img src="./keyboxer.png" style="position: absolute; left: 300px; top: 50px; scale: 4;">
+                    <img src="./tanel.png" style="position: absolute; left: 300px; top: 150px; scale: 2;">
                 </div>
-                <h1 style="border-color: cyan;">KeyBoxer<div style="background-color: cyan;"></div></h1>
+                <h1 style="border-color: #00ff00;">タネル<div style="background-color: #00ff00;"></div></h1>
             </div>
             <div class="section">概要</div>
             <div style="margin-left: 100px;">
-                自らが持つ謎の力を利用して音楽を奏でるボックス状の生物。<br>
-                通常より1.3倍程度の承認欲求を持っており、それを満たすためにSNSを始める。<br>
-                かなりの純粋であり、周りは自然と純粋さを守ろうとする。<br>
+                最も最初に生まれたロックボックス。他のロックボックスより頭が悪い。<br>
+                ロックボックスになる前は強盗を頻繁に行っていたが、記憶が消えたため<br>
+                悪者の自分を忘れ現在はKeyBoxerの支援にあたっている。<br>
                 <div class="serif">
-                    <div class="icon"><img src="./keyboxer.png"></div><div class="quote"><div>
-                        「僕の音楽をみんなに届けたい！」<br>
-                        「今日は何を演奏しようかな...これにしよう！」<br>
+                    <div class="icon"><img src="./tanel.png" style="position: relative; top: -10px; left: -10px;"></div><div class="quote"><div>
+                        「おいおい...そりゃマジかよ?」<br>
+                        「って俺はバカじゃねえ！」<br>
                     </div></div>
                 </div>
                 <table>
-                    <tr><th>目の色</th><td>水色</td></tr>
-                    <tr><th>誕生日</th><td>3432年3月19日</td></tr>
-                    <tr><th>好きな食べ物</th><td>桃</td></tr>
-                    <tr><th>好きなジャンル</th><td>全部！</td></tr>
-                    <tr><th>好きな生物</th><td>みんな！</td></tr>
+                    <tr><th>目の色</th><td>緑色</td></tr>
+                    <tr><th>誕生日</th><td>3416年11月14日</td></tr>
+                    <tr><th>好きな食べ物</th><td>カレー</td></tr>
+                    <tr><th>担当するジャンル</th><td>Trance</td></tr>
+                    <tr><th>好きな生物</th><td>なし</td></tr>
                 </table>
             </div>
         </div>
