大晦日の小さなアップデート

--- a/characters/amprel.html
+++ b/characters/amprel.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>蟹</td></tr>
                     <tr><th>担当するジャンル</th><td>Electro Swing</td></tr>
                     <tr><th>好きな生物</th><td>自分の両親</td></tr>
+                    <tr><th>一人称</th><td>僕</td></tr>
+                    <tr><th>二人称</th><td>君</td></tr>
+                    <tr><th>三人称</th><td>彼</td></tr>
+                    <tr><th>三人称 (名前)</th><td>KeyBoxer君、それ以外は呼び捨て</td></tr>
                 </table>
             </div>
         </div>
