--- a/characters/centraldread.html
+++ b/characters/centraldread.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>なし</td></tr>
                     <tr><th>担当するジャンル</th><td>Dubstep</td></tr>
                     <tr><th>好きな生物</th><td>なし</td></tr>
+                    <tr><th>一人称</th><td>私</td></tr>
+                    <tr><th>二人称</th><td>あなた</td></tr>
+                    <tr><th>三人称</th><td>彼</td></tr>
+                    <tr><th>三人称 (名前)</th><td>～さん</td></tr>
                 </table>
             </div>
         </div>
