--- a/characters/dr_older.html
+++ b/characters/dr_older.html
@@ -29,10 +29,14 @@
                 </div>
                 <table>
                     <tr><th>目の色</th><td>赤色</td></tr>
-                    <tr><th>製造開始日</th><td>3429年2月21日</td></tr>
+                    <tr><th>誕生日</th><td>3410年7月12日</td></tr>
                     <tr><th>好きな食べ物</th><td>なし</td></tr>
                     <tr><th>担当するジャンル</th><td>オーケストラ</td></tr>
                     <tr><th>好きな生物</th><td>なし</td></tr>
+                    <tr><th>一人称</th><td>私</td></tr>
+                    <tr><th>二人称</th><td>あなた</td></tr>
+                    <tr><th>三人称</th><td>彼</td></tr>
+                    <tr><th>三人称 (名前)</th><td>～さん</td></tr>
                 </table>
             </div>
         </div>
