--- a/characters/groaden.html
+++ b/characters/groaden.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>クリームシチュー</td></tr>
                     <tr><th>担当するジャンル</th><td>Hardcore</td></tr>
                     <tr><th>好きな生物</th><td>KeyBoxer</td></tr>
+                    <tr><th>一人称</th><td>私</td></tr>
+                    <tr><th>二人称</th><td>君</td></tr>
+                    <tr><th>三人称</th><td>彼</td></tr>
+                    <tr><th>三人称 (名前)</th><td>～君</td></tr>
                 </table>
             </div>
         </div>
