--- a/characters/keyboxer.html
+++ b/characters/keyboxer.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>桃</td></tr>
                     <tr><th>好きなジャンル</th><td>全部！</td></tr>
                     <tr><th>好きな生物</th><td>みんな！</td></tr>
+                    <tr><th>一人称</th><td>僕</td></tr>
+                    <tr><th>二人称</th><td>君</td></tr>
+                    <tr><th>三人称</th><td>彼</td></tr>
+                    <tr><th>三人称 (名前)</th><td>呼び捨て</td></tr>
                 </table>
             </div>
         </div>
