--- a/characters/meden.html
+++ b/characters/meden.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>ElecHouseによると、パフェ</td></tr>
                     <tr><th>担当するジャンル</th><td>Chiptune</td></tr>
                     <tr><th>好きなもの</th><td>ElecHouse</td></tr>
+                    <tr><th>一人称</th><td>(僕)</td></tr>
+                    <tr><th>二人称</th><td>(君)</td></tr>
+                    <tr><th>三人称</th><td>(彼)</td></tr>
+                    <tr><th>三人称 (名前)</th><td>(～君)</td></tr>
                 </table>
             </div>
         </div>
