--- a/characters/tanel.html
+++ b/characters/tanel.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>カレー</td></tr>
                     <tr><th>担当するジャンル</th><td>Trance</td></tr>
                     <tr><th>好きな生物</th><td>なし</td></tr>
+                    <tr><th>一人称</th><td>俺</td></tr>
+                    <tr><th>二人称</th><td>お前</td></tr>
+                    <tr><th>三人称</th><td>あいつ</td></tr>
+                    <tr><th>三人称 (名前)</th><td>呼び捨て</td></tr>
                 </table>
             </div>
         </div>
