--- a/story.html
+++ b/story.html
@@ -127,7 +127,7 @@
             <div class="section">TechCave</div>
 
             <div style="padding-left: 50px; padding-right: 50px;">
-                <a href="./characters/keyboxer.html">
+                <a href="./characters/dr_older.html">
                     <div class="character secret">
                         <div>
                             <img src="./characters/dr_older.png" style="object-position: 0px 0px;">
@@ -138,6 +138,21 @@
                         </div>
                         <div class="character_name2">
                             Dr.Older
+                        </div>
+                    </div>
+                </a>
+                
+                <a href="./characters/dr_breaker.html">
+                    <div class="character secret">
+                        <div>
+                            <img src="./characters/dr_breaker.png" style="object-position: 0px 50px;">
+                            <div class="cover"></div>
+                        </div>
+                        <div class="character_name">
+                            Dr.Breaker
+                        </div>
+                        <div class="character_name2">
+                            Dr.Breaker
                         </div>
                     </div>
                 </a>
