--- a/characters/reklan.html
+++ b/characters/reklan.html
@@ -33,6 +33,10 @@
                     <tr><th>好きな食べ物</th><td>フレンチトースト</td></tr>
                     <tr><th>担当するジャンル</th><td>ボーカル楽曲</td></tr>
                     <tr><th>好きな生物</th><td>なし</td></tr>
+                    <tr><th>一人称</th><td>僕</td></tr>
+                    <tr><th>二人称</th><td>君</td></tr>
+                    <tr><th>三人称</th><td>彼</td></tr>
+                    <tr><th>三人称 (名前)</th><td>KeyBoxer君、それ以外は呼び捨て</td></tr>
                 </table>
             </div>
         </div>
